# dogtrails

./: .env.example  .gitignore  Cargo.toml  README.md  dev.ps1
data/: trails.json
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: leaflet.rs  lib.rs
public/: app.js  index.html  styles.css
src/: doc.rs  lib.rs  main.rs  overpass.rs
