[package]
name = "stravata-frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.6"
gloo-timers = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
urlencoding = "2.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "Window",
  "Node",
] }
